# vlc-rc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test.sh
src/: client.rs  error.rs  lib.rs
src/client/: media.rs  socket.rs
